[package]
name = "portmapper"
version = "0.2.0"
authors = ["sjbeskur <sam.beskur@gmail.com>"]
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
snmp2 = "0.5.0"
thiserror = "2"
eui48 = { version = "1.1.0", default-features = false }
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm"]